--- a/simnav.html
+++ b/simnav.html
@@ -4,24 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SmilePay</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
     <link rel="stylesheet" href="styling.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
     <nav>
         <ul class="sidebar">
             <li onclick=hidesideabar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
-            <li id="search"><a href="#"><img src="search.svg" alt="">Search</a></li>
             <li><a href="#">Dashboard</a></li>
             <li><a href="#">Transaction</a></li>
             <li><a href="#">Payment</a></li>
             <li><a href="#">Planning</a></li>
-            <li><a href="#">Settings</a></li>
+            <li><hr></li>
             <li><a href="#">Help</a></li>
             <li><a href="#">Logout</a></li>
+            <li><br><br></li>
+            <div class="card" style="background-color:rgb(47, 79, 79); margin: 5px 15px 20px 15px; height: 240px; border-radius: 8px;">
+                <H4 style="color: white;"><strong>Found a bug?</strong></H4>
+                <p style="color: azure;">Report now to us if 
+                     you find any bug.
+                </p>
+                <button style="padding: 5px 5px 5px 5px; margin: 10px 20px 10px 20px; border-radius: 6px;">
+                    <img src="Report.svg" alt="" style="height:25px; width:25px; justify-content: left;">
+                    <p style="flex:auto;">Report</p>
+                </button>
+            </div>
+
         </ul>
         <ul>
-            <li><a href="#"><img src="smile.svg"alt="">SmilePay</a></li>
-            <li class="hideOnMobile" id="search"><a href="#"><img src="search.svg" alt="">Search</a></li>
+            <li><a href="#"><img src="smile.svg"alt="" style=""><p style="font-size:x-large; margin:10px 20px 10px 10px;">Smile<strong>Pay</strong></p></a></li>
+            <li></li>
             <li class="hideOnMobile"><a href="#">Dashboard</a></li>
             <li class="hideOnMobile"><a href="#">Transaction</a></li>
             <li class="hideOnMobile"><a href="#">Payment</a></li>
@@ -32,31 +45,71 @@
             <li onclick=showsideabar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
         </ul>
     </nav>
-    <div class="container">
-        <div class="content-section">
-            <div class="card">
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-3 col-md-4 col-6 col-xs-12">
+             <div class="card">
                 <img src="balance.svg" alt="Balance">
                 <p1>Balance</p1>
                 <h2>$529.323</h2>
+             </div>
             </div>
-            <div class="card">
+            <div class="col-lg-3 col-md-4 col-6 col-xs-12">
+             <div class="card">
                 <img src="income.svg" alt="Income">
                 <p1>Income</p1>
                 <h2>$149.513</h2>
+             </div>
             </div>
-            <div class="card">
+            <div class="col-lg-3 col-md-4 col-6 col-xs-12">
+             <div class="card">
                 <img src="savings.svg" alt="Savings">
                 <p1>Savings</p1>
                 <h2>$79.290</h2>
+             </div>
             </div>
-            <div class="card">
+            <div class="col-lg-3 col-md-4 col-6 col-xs-12">
+             <div class="card">
                 <img src="Expenses.svg" alt="Expenses">
                 <p1>Expenses</p1>
                 <h2>$529.323</h2>
+             </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-3 col-md-4 col-6 col-xs-12" id="graphc">
+                <div class="card" id="graph" style="display: flex; height: 250px; width: 400px;">
+                    <h3 style="color:rgb(47, 79, 79) ;">Money Flow</h3>
+                    <p style="color: black;">Expenses<img src="downa.svg" alt="" style="height: 10px; width: 10px;"> Monthly <img src="downa.svg" alt="" style="height: 10px;width: 10px;"></p>
+                    <canvas id="myChart" style="width:100%;max-width:700px"></canvas>
+                </div>
+            </div>     
+        </div>
+        <div class="row">
+            <div class="col-lg-6 col-md-6 col-12 col-xs-12">
+                <div class="card">  
+                    <h2>Transaction</h2>
+                    <span style="color:red ; width:40px; height: 25px; border-radius: 10px;">-$52</span>
+                    <ul id="botc1">
+                        <li><img src="adobepslogo.png" alt="" style="height: 25px; width:25px;"> Adobe Photoshop <span style="color: red;">- $52</span></li>
+                        <li><img src="sketch.png" alt="" style="height: 25px; width:25px;"> Sketch <span style="color: red;">- $15</span></li>
+                        <li><img src="antony.jpg" alt="" style="height: 25px; width:25px;"> Antonsen <span style="color: green">+ $11.5</span></li>
+                    </ul>
+                </div>
+            </div>     
+            <div class="col-lg-6 col-md-6 col-12 col-xs-12">
+                <div class="card" id="Planning">  
+                    <h2>Planning</h2>
+                    <ul id="botc1">
+                        <li> Buy a House</li>
+                        <li> Visit to Japan</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
-
+    
     <script>
         function showsideabar(){
             const sidebar = document.querySelector('.sidebar')
@@ -68,6 +121,33 @@
             sidebar.style.display = 'none'
 
         }
-    </script>
+</script>
+<script>
+const xValues = [50,60,70,80,90,100,110,120,130,140,150];
+const yValues = [7,8,8,9,9,9,10,11,14,14,15];
+
+new Chart("myChart",{
+    type: "line",
+    data: {
+        labels: xValues,
+        datasets: [{
+            fill: false,
+            lineTension: 0,
+            backgroundColor: "rgba(0,0,255,1.0)",
+            borderColor: "rgba(0,0,255,0.1)",
+            data: yValues
+        }]
+  },
+  options: {
+      legend: {display: false},
+      scales: {
+          yAxes: [{ticks: {min: 6, max:16}}],
+        }
+    }
+});
+</script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
